--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
   font-family: "Roboto", sans-serif;
 }
@@ -7,12 +8,16 @@ body{
   padding: 0;
   box-sizing: border-box;
 }
+
 a{
   text-decoration: none;
 }
-.text-dark-blue {
-  color: #2A2E55;
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
 }
-.text-light-blue {
-  color: #1D7BD8;
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
